// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> renders 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c0 > *:last-child {
  margin-top: 0;
  margin-bottom: 0;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    One Aside title
  </div>
</div>
`;

exports[`<Container /> renders narrow 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c0 > *:last-child {
  margin-top: 0;
  margin-bottom: 0;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    Narrow contained
  </div>
</div>
`;

exports[`<Container /> renders narrow without padding 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c0 > *:last-child {
  margin-top: 0;
  margin-bottom: 0;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    noPadding prop can only be used with the narrow prop
  </div>
</div>
`;

exports[`<Container /> renders without padding even if the prop is specified, because the narrow prop is not  1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c0 > *:last-child {
  margin-top: 0;
  margin-bottom: 0;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    noPadding prop can only be used with the narrow prop
  </div>
</div>
`;
